--- a/college.html
+++ b/college.html
@@ -28,7 +28,7 @@
 <div style="background-color: green;"><h3>About us</h3></div>
 
 <div style="display:flex; justify-content:center;">
-  <img src="col.jpg" width="500px" height="300px">
+  <img src="colfront.jpg" width="" height="">
 </div><br>
 <p>MEA Engineering College, located at Perinthalmanna in Malappuram district,
  Kerala, is affiliated to APJ Abdul Kalam Technological University (KTU). 
@@ -51,7 +51,7 @@ enabling students to pursue higher studies and research opportunities in their c
     <th>Intake</th>
 </tr>  
 <tr>
-    <td rowspan="5">B.tech</td>
+    <td rowspan="6">B.tech</td>
     <td>Civil Engineering</td>
     <td>60</td>
 </tr>
@@ -71,12 +71,60 @@ enabling students to pursue higher studies and research opportunities in their c
     <td>Computer Science Engineering</td>
     <td>60</td>
 </tr>
-<th colspan="3">Postgraduate Courses</th> 
+<tr>
+    <td>AI and ML Engineering</td>
+    <td>60</td>
+</tr>
+<tr>
+    <td>B.Arch</td>
+    <td>Architecture</td>
+    <td>46</td>
+</tr>
+    
+</table><br>
+<table>
+<tr>
+<th colspan="3">Postgraduate Courses</th>
+</tr>
+<tr>
+    <th>Course</th>
+    <th>Department</th>
+    <th>Specialization</th>
+    <th>Intake</th>
+</tr>  
+<tr>
+    <td rowspan="5">M.tech</td>
+    <td>Civil Engineering</td>
+    <td>Transportaion Engineering</td>
+    <td>18</td>
+</tr>
+<tr>
+    <td>Mechanical Engineering</td>
+    <td>Industrial Engineering</td>
+    <td>18</td>
+</tr>
+<tr>
+    <td>Electrical Engineering</td>
+    <td>Industrial Drivers & Control</td>
+    <td>18</td>
+</tr>
+<tr>
+    <td>Electronics & Communication Engineering</td>
+    <td>Advanced Electronic & Communication</td>
+    <td>18</td>
+</tr>
+<tr>
+    <td>Computer Science Engineering</td>
+    <td>Computer Science Engineering </td>
+    <td>18</td>
+</tr>
 <tr>
     <td>MCA</td>
-    <td>Master of Computer Application</td>
-    <td>60</td>
-</tr>       
+    <td>Master Of computer Application</td>
+    <td>Computer Aplication</td>
+    <td>30</td>
+</tr>
+
 </table><br>
 <div style="background-color: green;"><h3>Contact us</h3></div>
 <h3>Adress for Communication</h3>
@@ -86,6 +134,7 @@ enabling students to pursue higher studies and research opportunities in their c
   Malappuram District,Kerala-PIN 679325
 </p>
 <a href="https://www.meaec.edu.in/">Visit Our Official Website</a>
+
 
 
 </body>
